--- a/src/visual/dialog/IMdialog.form
+++ b/src/visual/dialog/IMdialog.form
@@ -78,10 +78,7 @@
           <grid id="9a3db" binding="keypanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="700"/>
-                <maximum-size width="200" height="-1"/>
-              </grid>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none" title="Keys"/>
@@ -95,7 +92,15 @@
                 <children>
                   <component id="3dd05" class="javax.swing.JList" binding="list">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <maximumSize width="300" height="19"/>
+                      <minimumSize width="300" height="19"/>
+                      <model>
+                        <item value="(none)"/>
+                      </model>
+                      <preferredSize width="200" height="20"/>
+                      <selectionMode value="0"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
@@ -116,10 +121,14 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <grid id="1c7da" binding="picbow" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="1c7da" binding="picbow" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <autoscrolls value="true"/>
+                      <background color="-12829636"/>
+                      <preferredSize width="500" height="500"/>
+                    </properties>
                     <border type="none"/>
                     <children/>
                   </grid>
